# hairo-world-plugin

./: README.md
misc/script/: make_desktop_entry.sh
sample/: CMakeLists.txt
sample/IconPreview/: IconPreviewPlugin.cpp  IconTheme.h
sample/SimpleController/: Gen2JoystickController.cpp  Gen3.cnoid  Gen3JoystickController.cpp  Gen3liteJoystickController.cpp  JointMapController.cpp  RAJoystickController.cpp
sample/gain-test-plugin/src/: GainTestView.cpp
sample/hobby-drone/: CMakeLists.txt
sample/hobby-drone/model/: HobbyDrone.body
sample/minio-client-plugin/src/: CMakeLists.txt  MinIOClient.cpp  MinIOClient.h  MinIOClientPlugin.cpp  ObjectBrowser.cpp  ObjectBrowser.h
sample/minio-client-plugin/src/po/: ja.po
sample/narrec/: CMakeLists.txt
sample/robotic-arm/: CMakeLists.txt
sample/robotic-arm/sample/: Gen2.cnoid  Gen3.cnoid  Gen3lite.cnoid  RAJoystickController.cpp
sample/spot/: CMakeLists.txt
sample/spot/model/: SpotArm.body
sample/spot/sample/: CMakeLists.txt  SpotArm.cnoid  SpotArmController.cpp  SpotLiedown.cnoid  SpotLiedownController.cpp
sample/ugv/: CMakeLists.txt
sample/ugv/sample/: Husky-UR5-2F85.cnoid  Husky.cnoid  Jackal.cnoid
share/: CMakeLists.txt
share/model/Gen2/: Gen2.body
share/model/Gen3/: LICENSE
share/model/Gen3lite/: Gen3liteNG.body  LICENSE
share/model/Spot/: Spot.body  SpotArm.body  SpotWA.body  SpotWB.body
src/: CMakeLists.txt
src/BodyCreatorPlugin/: BentPipeCreator.cpp  BodyCreator.h  BodyCreatorPlugin.cpp  CMakeLists.txt  CrawlerCreator.cpp  FileDroppableWidget.cpp  FormatConverter.cpp  GratingCreator.cpp  InertiaCalculator.cpp  InertiaCalculator.h  SlopeCreator.cpp  StairsCreator.cpp  TerrainCreator.cpp
src/BodyCreatorPlugin/po/: ja.po
src/BodyEditPlugin/: BentPipeCreator.cpp  BentPipeGenerator.cpp  BentPipeGenerator.h  BodyConverter.cpp  BodyCreator.h  BodyCreatorDialog.cpp  BodyCreatorDialog.h  BodyEditPlugin.cpp  CMakeLists.txt  ColorButton.cpp  ColorButton.h  CrawlerCreator.cpp  CrawlerGenerator.cpp  CrawlerGenerator.h  CreatorToolBar.h  FileDroppableWidget.h  FormatConverter.cpp  FormatConverter.h  GeneratorBar.cpp  GeneratorBar.h  GeneratorButtonBox.cpp  GeneratorButtonBox.h  GeneratorWindow.cpp  GeneratorWindow.h  GratingCreator.cpp  GratingGenerator.cpp  GratingGenerator.h  InertiaCalculator.cpp  PipeCreator.cpp  PipeGenerator.cpp  PipeGenerator.h  SlopeCreator.cpp  SlopeGenerator.cpp  SlopeGenerator.h  StairsCreator.cpp  StairsGenerator.cpp  StairsGenerator.h  TerrainCreator.cpp  TerrainGenerator.cpp  TerrainGenerator.h  (+1 more)
src/BodyEditPlugin/po/: ja.po
src/BookmarkPlugin/: ArchiveListDialog.cpp  BookmarkManager.cpp  BookmarkPlugin.cpp  CMakeLists.txt  HamburgerMenu.cpp  HistoryManager.cpp  LayoutManager.cpp  ListedWidget.cpp  ListedWidget.h  ProjectListedDialog.cpp  ProjectListedDialog.h  SwitchableWidget.cpp  SwitchableWidget.h  WorldLogManager.cpp
src/BookmarkPlugin/po/: ja.po
src/CFDPlugin/: CFDSimulatorItem.cpp  CMakeLists.txt  FlightEventReader.cpp
src/CFDPlugin/po/: ja.po
src/FileExplorerPlugin/: BodyLocator.cpp  BodyLocator.h  CMakeLists.txt  FileExplorer.cpp
src/GoogleMaterialSymbols/: CMakeLists.txt
src/JoystickStartPlugin/: AxisWidget.cpp  CMakeLists.txt  DigitalClock.cpp  DigitalClock.h  IntervalTimer.cpp  JoystickStartPlugin.cpp  JoystickTester.cpp  KeyConfig.cpp  OnScreenJoystickWidget.cpp
src/JoystickStartPlugin/po/: ja.po
src/NetEmPlugin/: NetworkEmulator.cpp
src/PHITSPlugin/: CrossSectionItem.cpp  EnergyFilter.cpp  GammaEffect.cpp  GammaImagerItem.cpp  OrthoNodeData.cpp
src/SimpleColliderPlugin/: CMakeLists.txt
src/VFXPlugin/: CMakeLists.txt  NoisyCamera.cpp  NoisyCamera.h  VFXVisionSimulatorItem.cpp
src/WRSUtilPlugin/: CMakeLists.txt  WRSUtilBar.cpp  WRSUtilPlugin.cpp
src/ZBarPlugin/: CMakeLists.txt  QRReader.cpp  ZBarPlugin.cpp
